--- a/gui/.gitignore
+++ b/gui/.gitignore
@@ -1,1 +1,12 @@
 /package-info.class
+/ContextMenuMouseListener$1.class
+/ContextMenuMouseListener$2.class
+/ContextMenuMouseListener$3.class
+/ContextMenuMouseListener$4.class
+/ContextMenuMouseListener$5.class
+/ContextMenuMouseListener$Actions.class
+/ContextMenuMouseListener.class
+/Frame1.class
+/MainFrame$1.class
+/MainFrame.class
+/ShowFrame.class
